re PR middle-end/21309 (internal compiler error: in expand_mult_const, at expmed.c:2884)

PR middle-end/21309
	* expmed.c (choose_mult_variant): Return immediately when mult_cost
	is less than zero.  Limit mult_cost to a reasonable upper bound for
	the synthetic multiplication sequence.

From-SVN: r107542